moved snowflake in mixin class